--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "solo",
     "description": "A Ghost theme",
-    "version": "1.0.0",
+    "version": "1.1.0",
     "private": true,
     "engines": {
         "ghost": ">=5.0.0"
@@ -60,7 +60,7 @@
                 "type": "text"
             },
             "show_site_title_in_head": {
-                "type": "boolean"
+                "type": "boolean",
                 "default": false
             },
             "header_section_layout": {
